chore: add model mapping for entities, services, and controllers (#6)